--- a/gateway/nginx/nginx.conf
+++ b/gateway/nginx/nginx.conf
@@ -103,7 +103,7 @@ http {
             # JWT Validation (en production, utiliser auth_request)
             # auth_request /auth/validate;
             
-            proxy_pass http://user-service;
+            proxy_pass http://user-service/api/users;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -114,7 +114,7 @@ http {
         location /api/products {
             limit_req zone=api_limit burst=20 nodelay;
             
-            proxy_pass http://product-service;
+            proxy_pass http://product-service/api/products;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Authorization $http_authorization;
@@ -124,7 +124,7 @@ http {
         location /api/orders {
             limit_req zone=api_limit burst=10 nodelay;
             
-            proxy_pass http://order-service;
+            proxy_pass http://order-service/api/orders;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Authorization $http_authorization;
@@ -135,7 +135,7 @@ http {
             limit_req zone=api_limit burst=5 nodelay;
             
             # En production: TLS client certificate validation
-            proxy_pass http://payment-service;
+            proxy_pass http://payment-service/api/payments;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Authorization $http_authorization;
@@ -145,7 +145,7 @@ http {
         location /api/inventory {
             limit_req zone=api_limit burst=20 nodelay;
             
-            proxy_pass http://inventory-service;
+            proxy_pass http://inventory-service/api/inventory;
             proxy_set_header Host $host;
             proxy_set_header Authorization $http_authorization;
         }
@@ -154,7 +154,7 @@ http {
         location /api/notifications {
             limit_req zone=api_limit burst=10 nodelay;
             
-            proxy_pass http://notification-service;
+            proxy_pass http://notification-service/api/notifications;
             proxy_set_header Host $host;
             proxy_set_header Authorization $http_authorization;
         }
@@ -164,7 +164,7 @@ http {
             limit_req zone=api_limit burst=5 nodelay;
             
             # En production: vérifier le rôle admin dans le JWT
-            proxy_pass http://admin-dashboard;
+            proxy_pass http://admin-dashboard/api/admin;
             proxy_set_header Host $host;
             proxy_set_header Authorization $http_authorization;
         }
